tests/baselines/reference/classHeritageWithTrailingSeparator.errors.txt
==== tests/cases/compiler/classHeritageWithTrailingSeparator.ts (1 errors) ====
    class C { foo: number }
    class D extends C, {
                     ~
!!! error TS1009: Trailing separator not allowed.
    }